# KickClipTool

./: .gitignore  README.md  api.py  gui.py  ideas.txt  log.py  main.py  models.py  package-lock.json  package.json  svelte.config.js  vite.config.ts
api/: api.py  constants.py
gui/: constants.py  events.py  gui.py  utils.py
kicktool/: index.html  package-lock.json  package.json
kicktool/src/: App.svelte  app.css
kicktool/src/lib/: Logo.svelte  SearchBar.svelte  SearchResults.svelte  api.ts
legacy/: .gitignore  LICENSE  models.py  requirements.txt
legacy/gui/: constants.py  gui.py  utils.py
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: download.rs
src/lib/: App.svelte  ChannelState.svelte.ts  ClipState.svelte.ts  Content-state.svelte.ts  ContentState.svelte.ts  Header.svelte  Message.svelte  Progress.svelte  SearchBar-state.svelte.ts  SearchBar.svelte  SearchBarState.svelte.ts  Spinner.svelte  VideoState.svelte.ts  api.ts  notifications.ts  types.d.ts  utils.ts
src/lib/content/: Channel.svelte  ChannelState.svelte.ts  Clip.svelte  ClipState.svelte.ts  Content.svelte  ContentState.svelte.ts  Sort.svelte  SortButton.svelte  format.ts
src/lib/video-player/: CloseButton.svelte  DownloadButton.svelte  ProgressCircle.svelte  VideoElement.svelte  VideoPlayer.svelte  VideoState.svelte.ts  WebButton.svelte  download.ts  video.ts
src/routes/api/download/: +server.ts
svelte-port/: package-lock.json  package.json
svelte-port/src/: app.css  app.html
svelte-port/src-tauri/: Cargo.toml  tauri.conf.json
svelte-port/src-tauri/capabilities/: default.json
svelte-port/src-tauri/icons/: icon.icns
svelte-port/src-tauri/src/: download.rs  main.rs
svelte-port/src/lib/: App.svelte  Channel.svelte  Clip.svelte  Header.svelte  Logo.svelte  Message.svelte  SearchBar.svelte  SearchResults.svelte  Spinner.svelte  VideoPlayer.svelte  api.ts  types.d.ts
svelte-port/src/lib/content/: Channel.svelte  Clip.svelte  Content.svelte
svelte-port/src/lib/video-player/: DownloadButton.svelte  VideoElement.svelte  VideoPlayer.svelte  WebButton.svelte
svelte-port/src/routes/: +page.svelte
svelte-port/src/routes/api/channels/: +server.ts
svelte-port/src/routes/api/download/: +server.ts
