[package]
name = "kct"
version = "2.1.0"
description = "A tool for kick(.com) clips"
authors = ["Fedecas"]
license = "GPL"
repository = "https://github.com/Fedecas/KickClipTool"
edition = "2024"
rust-version = "1.86.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = true # Compile binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Use `z` for size. Use `3` for speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
log = "0.4"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-fs = "2.3.0"
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-shell = "2.2.1"
