[package]
name = "kct"
version = "2.0.0"
description = "A tool for kick(.com) clips"
authors = ["Fedecas"]
license = "MIT"
repository = "https://github.com/Fedecas/KickClipTool"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
regex = "1.11.1"
reqwest = "0.12.15"
url = "2.5.4"
tauri-plugin-shell = "2.2.1"
tauri-plugin-fs = "2.3.0"
